# Automated-diagnosis-of-arrhythmia-CNN-LSTM

./: .gitignore  FILE_ROLES.txt  README.md  REPORT.md  requirements.txt
ecg-arrhythmia-cnnlstm/: .gitignore  .pre-commit-config.yaml  .vercelignore  Dockerfile  Makefile  README.md  netlify.toml  pyproject.toml  repro.sh  requirements.txt
ecg-arrhythmia-cnnlstm/.github/workflows/: netlify-deploy.yml
ecg-arrhythmia-cnnlstm/eval/: aggregate_metrics.json
ecg-arrhythmia-cnnlstm/eval/fold_1/: classification_report.csv  classification_report.md
ecg-arrhythmia-cnnlstm/eval/fold_10/: classification_report.csv  classification_report.md
ecg-arrhythmia-cnnlstm/eval/fold_2/: classification_report.csv  classification_report.md
ecg-arrhythmia-cnnlstm/eval/fold_3/: classification_report.csv  classification_report.md
ecg-arrhythmia-cnnlstm/eval/fold_4/: classification_report.csv  classification_report.md
ecg-arrhythmia-cnnlstm/eval/fold_5/: classification_report.csv  classification_report.md
ecg-arrhythmia-cnnlstm/eval/fold_6/: classification_report.csv  classification_report.md
ecg-arrhythmia-cnnlstm/eval/fold_7/: classification_report.csv  classification_report.md
ecg-arrhythmia-cnnlstm/notebooks/: 01_demo.ipynb
ecg-arrhythmia-cnnlstm/reports/: index.html  rapport.md  style.css
ecg-arrhythmia-cnnlstm/scripts/: make_report.py  validate_project.py
ecg-arrhythmia-cnnlstm/tests/: test_preprocess.py
ecg-arrhythmia-cnnlstm/web-static/: aggregate_classification_report.csv  aggregate_classification_report.md  index.html  netlify.toml
notebooks/: demo.ipynb
(+25 files in other folders)
